force-app/main/default/objects/Freee_Account_Item_Mappings__c/Freee_Account_Item_Mappings__c.object-meta.xml
<CustomObject>
    <label>Freee勘定科目マッピング</label>
    <nameField>
        <label>マッピング名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freee勘定科目マッピング</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>