force-app/main/default/objects/Freee_Account_Item_Mappings__c/fields/Freee_Account_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Freee_Account_Item_Id__c</fullName>
    <label>freee勘定科目ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>