force-app/main/default/objects/Freee_Account_Item_Mappings__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>